Finalisation dashboard et figures

--- a/notebooks/analysis_oms_forbes.ipynb
+++ b/notebooks/analysis_oms_forbes.ipynb
@@ -15,14 +15,7 @@
     "- framing (rule-based),\n",
     "- extraction d'entités et réseau co-occurrence,\n",
     "- appariement OMS → Forbes (nearest neighbors),\n",
-    "- tests statistiques simples.\n",
-    "\n",
-    "**Remarques importantes :**\n",
-    "- La **temporal analysis** est volontairement exclue de ce notebook.\n",
-    "- Le notebook suppose que les fichiers produits par le pipeline existent dans `/data :\n",
-    "  - `all_articles_processed.csv` (articles nettoyés),\n",
-    "  - `tfidf.joblib` \n",
-    "  - `embeddings.npy` "
+    "- tests statistiques simples."
    ]
   },
   {
@@ -1274,6 +1267,59 @@
     "    print('Saved entities to', os.path.join(RESULTS_DIR, 'forbes_entities.csv'))\n",
     "else:\n",
     "    print('spaCy not available — install the models to run NER')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4441dfb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OMS articles chargés : 59\n",
+      "Extraction des entités OMS…\n",
+      "✔ Fichier généré : ./outputs/analysis_results\\oms_entities.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Charger spaCy\n",
+    "try:\n",
+    "    import spacy\n",
+    "    nlp_fr = spacy.load(\"fr_core_news_sm\")\n",
+    "    nlp_en = spacy.load(\"en_core_web_sm\")\n",
+    "except Exception as e:\n",
+    "    print(\"spaCy models not installed or failed to load:\", e)\n",
+    "    nlp_fr = nlp_en = None\n",
+    "\n",
+    "# Extraire les entités\n",
+    "ent_rows = []\n",
+    "if nlp_fr is not None:\n",
+    "    print(\"Extraction des entités OMS…\")\n",
+    "    for idx, row in df_oms.iterrows():\n",
+    "        lang = row.get(\"lang\", \"fr\")\n",
+    "        text = str(row.get(\"texte_clean_bert\", row.get(\"texte\", \"\")))\n",
+    "        nlp = nlp_fr if str(lang).startswith(\"fr\") else nlp_en\n",
+    "\n",
+    "        doc = nlp(text)\n",
+    "        for ent in doc.ents:\n",
+    "            if ent.label_ in (\"PER\", \"ORG\", \"GPE\", \"LOC\", \"MISC\", \"PERSON\"):\n",
+    "                ent_rows.append({\n",
+    "                    \"global_index\": int(idx),\n",
+    "                    \"entity\": ent.text.strip(),\n",
+    "                    \"label\": ent.label_\n",
+    "                })\n",
+    "\n",
+    "    oms_ent_df = pd.DataFrame(ent_rows)\n",
+    "    out_path = os.path.join(RESULTS_DIR, \"oms_entities.csv\")\n",
+    "    oms_ent_df.to_csv(out_path, index=False)\n",
+    "    print(\" Fichier généré :\", out_path)\n",
+    "else:\n",
+    "    print(\" spaCy non disponible — impossible d'extraire les entités OMS.\")\n"
    ]
   },
   {
